<resources>
    <string name="app_name">Clock App</string>
    <string name="alarm">Alarm</string>
    <string name="clock">Clock</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="bedtime">Bedtime</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="start_lap">Start Lap</string>
    <string name="no_alarms">No Alarms</string>
    <string name="no_alarm_icon">No Alarm Icon</string>
    <string name="label">Label</string>
    <string name="add_label">Add Label</string>
    <string name="collapse_arrow">collapse_arrow</string>
    <string name="dismiss">Dismiss</string>
    <string name="expand_arrow">Expand Arrow</string>
    <string name="m">M</string>
    <string name="T">T</string>
    <string name="w">W</string>
    <string name="th">T</string>
    <string name="f">F</string>
    <string name="sa">S</string>
    <string name="su">S</string>
    <string name="alarm_activated">Alarm Activated</string>
    <string name="alarm_label_badge">Alarm Label Badge</string>
    <string name="expand_card_icon">Expand Card Icon</string>
    <string name="collapse_card_item">Collapse Card Item</string>
    <string name="delete">Delete</string>
    <string name="defaultt">Default</string>
    <string name="vibrate">Vibrate</string>
    <string name="not_scheduled">Not Scheduled</string>
    <string name="scheduled_daily">Scheduled Daily</string>
    <string name="notification_icon">notification_icon</string>
    <string name="chosen_value_icon">Chosen value icon</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="scheduled">Scheduled</string>
    <string name="start_timer">Start timer</string>
    <string name="timer_text">%s%s</string>
    <string name="running_timer_1_text">%s:%s:%s</string>
    <string name="running_timer_2_text">%s:%s</string>
    <string name="running_timer_3_text">%s</string>
    <string name="reset">Reset</string>
    <string name="add_1_min">+1:00</string>
    <string name="pause">Pause</string>
    <string name="running_stopwatch_1_text">%s\n\t\t\t%s</string>
    <string name="running_stopwatch_2_text">%s:%s\n\t\t\%s</string>
    <string name="running_stopwatch_3_text">%s:%s</string>
    <string name="running_stopwatch_4_text">%s:%s:%s</string>
    <string name="bedtime_schedule_icon">Bedtime Schedule Icon</string>
    <string name="schedule">Schedule</string>
    <string name="bedtime_capitalized">BEDTIME</string>
    <string name="wake_up">WAKE UP</string>
    <string name="set_time_text">%s:%s</string>
    <string name="sleep_sounds">Sleep Sounds</string>
    <string name="music_tone_icon">Music Tone Icon</string>
    <string name="play_sleep_sound">Play Sleep Sound</string>
    <string name="choose_another_sound">Choose another sound</string>
    <string name="default_time">00:00</string>
    <string name="default_time_2">%s:%s</string>
    <string name="bottom_sheet_icon">Bottom Sheet Icon</string>
    <string name="bedtime_not_set">No Bedtime Set</string>
    <string name="bedtime_not_set_text">Reminder notification and bedtime mode are off. The selected time will be used to show your recent bedtime activity.</string>
    <string name="wake_up_time_not_set">No wake-up alarm set</string>
    <string name="wake_up_time_not_set_text">Even though the alarm isn’t on, the selected time will be used to turn off Bedtime mode and show your recent Bedtime activity.</string>
    <string name="reminder_notification">Reminder Notification</string>
    <string name="reminder_notification_text">15 minutes before bedtime</string>
    <string name="sunrise_alarm">Sunrise Alarm</string>
    <string name="sunrise_alarm_description">Slowly brighten screen before alarm</string>
    <string name="sound">Sound</string>
    <string name="sun_icon">Sun Icon</string>
    <string name="vibrate_icon">Vibrate Icon</string>
    <string name="fifteen_min_reminder">15 minutes before bedtime</string>
    <string name="thirty_min_reminder">30 minutes before bedtime</string>
    <string name="forty_five_min_reminder">45 minutes before bedtime</string>
    <string name="one_hr_reminder">1 hour before bedtime</string>
    <string name="off">Off</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="dismiss_alarm">Dismiss Alarm</string>
    <string name="everyday">Everyday</string>
</resources>