<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?actionBarSize"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bedtime.presentation.views.BedTimeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/bedtime_schedule_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bedtime_schedule_icon"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bedtime_card_title_icons_bg"
                android:contentDescription="@string/bedtime_schedule_icon"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clock_black" />

            <TextView
                android:id="@+id/schedule_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/schedule"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/bedtime_schedule_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bedtime_alarm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/bedtime_capitalized"
                android:textColor="@color/grey"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule_card_title" />


            <TextView
                android:id="@+id/wakeup_alarm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="52dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/wake_up"
                android:textColor="@color/grey"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule_card_title" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/bedtime_alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/default_time"
                android:textColor="@color/grey"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bedtime_alarm_label"
                tools:text="00:00" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/wakeup_alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/default_time"
                android:textColor="@color/grey"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wakeup_alarm_label"
                tools:text="00:00" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>