<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label"
        android:textColor="@color/grey_50"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="320sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pb_timer"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_shape"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotationY="180" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_set_timer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                tools:text="1:57:00" />

            <TextView
                android:id="@+id/tv_add_one_minute"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/add_1_min"
                android:textColor="@color/grey_50"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_layout">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_delete_timer"
            style="@style/LightModeFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            app:fabCustomSize="50dp"
            app:srcCompat="@drawable/ic_delete" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/play_button" />

            <include layout="@layout/pause_button" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_timer"
            style="@style/LightModeFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            app:fabCustomSize="50dp"
            app:srcCompat="@drawable/ic_baseline_add_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>